--- a/Views/Shared/_mainLayout.cshtml
+++ b/Views/Shared/_mainLayout.cshtml
@@ -14,13 +14,14 @@
     <link href="~/assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
           rel="stylesheet">
+    <link href="~/assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 
 
     <!-- Custom styles for this template -->
     <link href="~/assets/css/sb-admin-2.min.css" rel="stylesheet">
 
     <!-- Custom styles for this page -->
-    <link href="~/assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+  
 
 
 
@@ -332,6 +333,9 @@
     <!-- Page level custom scripts -->
     <script src="~/assets/js/demo/chart-area-demo.js"></script>
     <script src="~/assets/js/demo/chart-pie-demo.js"></script>
+
+    <script src="~/assets/vendor/datatables/jquery.dataTables.min.js"></script>
+    <script src="~/assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
 </body>
 </html>
