fixed some bugs in fine management and added report master for both all portal

--- a/Views/BookMaster/Bulkupload.cshtml
+++ b/Views/BookMaster/Bulkupload.cshtml
@@ -17,8 +17,7 @@
 <form asp-controller="BookMaster" asp-action="BulkUpload" method="post" enctype="multipart/form-data">
     <div class="form-group">
         <label>Select CSV File:</label>
-        <input type="file" name="csvfile" class="form-control" accept=".csv" required />
+        <input type="file" name="csvFile" class="form-control" accept=".csv" required />
     </div>
     <button type="submit" class="btn btn-primary mt-2">Upload</button>
 </form>
-
