--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -7,10 +7,13 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/librarycss/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/library_management.styles.css" asp-append-version="true" />
-  
+
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/17.0.19/css/intlTelInput.css" />
      <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" 
-          rel="stylesheet"> 
+          rel="stylesheet">
+
+
 
     @RenderSection("Styles", required: false)
 
@@ -43,6 +46,11 @@
         </main>
     </div>
 
+    @* <div id="globalLoader"> *@
+    @*     <img src="~/images/loader_gif.gif" alt="Loading..." /> *@
+    @* </div>> *@
+
+
     @* <footer class="border-top footer text-muted"> *@
     @*     <div class="container"> *@
     @*         &copy; 2025 - library_management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> *@
@@ -57,8 +65,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.rawgit.com/jzaefferer/jquery-validation/1.19.3/dist/jquery.validate.min.js"></script>
 
-
  
+ 
+
 
 </body>
 </html>
