--- a/wwwroot/librarycss/site.css
+++ b/wwwroot/librarycss/site.css
@@ -37,4 +37,25 @@ input.error, select.error {
         color: red;
     }
 
-//code for red colour error
+/*#globalLoader {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;*/
+    /*    background: rgba(255, 255, 255, 0.8);*/
+    /*background: rgba(0, 0, 0, 0.6);*/ /* Dark overlay with transparency */
+
+    /*z-index: 9999;
+    text-align: center;
+}
+
+    #globalLoader img {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 80px;*/ /* Adjust width */
+        /*height: 80px;*/ /* Adjust height */
+    /*}*/
